@@ -1,9 +1,7 @@
 package com.odde.doughnut.controllers.json;
 
 import com.theokanning.openai.completion.chat.ChatMessage;
-import com.theokanning.openai.completion.chat.ChatMessageRole;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 
@@ -11,17 +9,10 @@ import lombok.Getter;
 public class FineTuningExampleForQuestionGeneration {
   private @Getter List<SimplifiedOpenAIChatMessage> messages;
 
-  public static FineTuningExampleForQuestionGeneration generateTrainingData(
-      List<ChatMessage> messages, String rawJsonQuestion) {
+  public static FineTuningExampleForQuestionGeneration fromChatMessages(
+      List<ChatMessage> messages1) {
     List<SimplifiedOpenAIChatMessage> simplifiedOpenAIChatMessages =
-        messages.stream()
-            .map(
-                chatMessage ->
-                    new SimplifiedOpenAIChatMessage(
-                        chatMessage.getRole(), chatMessage.getContent()))
-            .collect(Collectors.toList());
-    simplifiedOpenAIChatMessages.add(
-        new SimplifiedOpenAIChatMessage(ChatMessageRole.ASSISTANT.value(), rawJsonQuestion));
+        messages1.stream().map(SimplifiedOpenAIChatMessage::fromOpenAIChatMessage).toList();
     return new FineTuningExampleForQuestionGeneration(simplifiedOpenAIChatMessages);
   }
 }
